Sat Apr 07 20:54:58 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix crash

Sat Apr 07 18:10:46 2018  Jiri (George) Lebl <jirka@5z.com>

	* Add in internal version of a GTK 2.0 version of VTE  A temporary
	  fix.  When star trek future arrives, the GtkExtra stuff will be
	  ported to GTK+3.0 and all will be well.  Of course by then we will
	  be on GTK+10.0 so ...

Fri Jan 12 23:27:23 2018  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update for newest data from GIMPS

Thu Oct 12 17:52:41 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/plane-curves.gel: Simple brute force algorithm for
	  plotting plane curves.

Thu Oct 12 17:22:01 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/strange-attractor.gel: make the variable names match the
	  comment
	
	* examples/plot-ode-runge-kutta.gel: An example for plotting
	  solutions to ODE using RungeKutta

	* examples/plot-ode-trajectory-runge-kutta.gel: An example for plotting
	  trajectories to first order ODE systems.  Plots an trajectory
	  starting at the mouse pointer

Wed May 10 17:37:33 2017  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.23

Sat Apr 29 16:58:25 2017  Jiri (George) Lebl <jirka@5z.com>

	* help/make-makefile-am.sh, help/update-xml-to-txt-html.sh, */*.html,
	  Makefile.am:  Since automake is smarter than I am and knows how I
	  should work, I made a script to generate a Makefile.am so that it
	  can't complain.  Now runs through distcheck with no errors!

Thu Apr 27 18:30:33 2017  Jiri (George) Lebl <jirka@5z.com>

	* configure.ac, src/Makefile.am: extra warning flags are handled
	  differently now

Wed Apr 26 21:11:54 2017  Jiri (George) Lebl <jirka@5z.com>

	* src/genius.c: make genius show the HTML version of the manual in
	  lynx, links, or w3m

Wed Apr 26 20:00:02 2017  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: Fixes from Anders Jonsson, plus some other minor
	  improvements.  Also all wikipedia links are now https
