@@ -1,2 +1,5 @@
 src/parse.c
 sub/lib/library-strings.c
+vte/src/iso2022.c
+vte/src/trie.c
+vte/src/vte.c
