@@ -1,5 +1,5 @@
 /* GENIUS Calculator
- * Copyright (C) 1997-2017 Jiri (George) Lebl
+ * Copyright (C) 1997-2018 Jiri (George) Lebl
  *
  * Author: Jiri (George) Lebl
  *
