@@ -1,3 +1,9 @@
+Sat Apr 07 21:18:25 2018  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/calc.h, po/*.po: update the copyright string
+
+	* po/POTFILES.skip: remove the vte files, no need to translate those
+
 Sat Apr 07 20:54:58 2018  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: Fix crash
